2021-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Add two fields

2020-12-26  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https to fetch run.sh

2016-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.6

	* NAMESPACE: Change some importFrom() from RSQLite to DBI

2016-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled version and date

	* DESCRIPTION (Title, Description): Edited to current standards

	* DESCRIPTION (Imports): Added 'Matrix, DBI, RSQLite, plyr, reshape,
	lattice'

	* NAMESPACE: Added importFrom() statements for each package

	* R/benchmark.R (svdBenchmarkgputools): Commented-out as SVD no
	longer provided in current gputools
	* man/benchmark.Rd: Commented-out here too

	* .travis.yml: Switch to using run.sh for Travis CI

2013-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.5

	* vignettes/*: Moved files from inst/doc/

	* ChangeLog/*: Moved from inst/

	* .travis.yml: Added for Github / Travis support
	* .gitignore: Added for git support

	* R/figures.R: Remove extraneous require(reshape)

2010-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.4

	* R/figures.R: Added figure_Lattice()
	* man/figures.Rd: Added figure_Lattice()

	* inst/doc/gcbd.Rnw: Applied a number of small fixes and changed
	results discussion to use the lattice figures

2010-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

	* R/figures.R: Added figure_loglogLattice()
	* man/figures.Rd: Added figure_loglogLattice()

2010-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.2

2010-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/*R: Remove magma tests code for now
	* man.*Rd: Updated documentation